Quick hack to fix the navbar image overflowing issue.
This fixes #2180, but we should seriously considering modernizing the
CSS techniques used here. I suspect that by using flexbox or even css grids, we could
simplify this a whole lot.

--- a/WcaOnRails/app/assets/stylesheets/navbar-static-top.scss
+++ b/WcaOnRails/app/assets/stylesheets/navbar-static-top.scss
@@ -20,8 +20,7 @@
   .navbar-brand {
     padding: 0;
     padding-top: 16px;
-    height: 110px;
-    margin-bottom: -50px;
+    margin-bottom: 10px;
     margin-top: 10px;
 
     span {
@@ -81,6 +80,8 @@
 @media (min-width: $screen-sm-min) {
   .navbar-static-top {
     .navbar-brand {
+      height: 110px;
+      margin-bottom: -50px;
       img {
         height: 100px;
         margin-top: -15px;
